[package]
name = "miniimp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
anyhow = "1.0.57"
sdl2 = "0.35.2"
log = "0.4.17"
env_logger = "0.9.0"

[build-dependencies]
pest_generator = "2.1.3"
quote = "1.0.18"